--- a/blog.html
+++ b/blog.html
@@ -84,6 +84,11 @@ var _hmt = _hmt || [];
     
  
 <tr>
+    <td><a href="https://sourl.cn/SdDBuL"><cite>奇奇怪怪的云</cite></a></td>
+    <td class="right"><time>2020-07-14</time></td>
+</tr>    
+      
+<tr>
     <td><a href="/posts/2020-07-13-birthday-vivian"><cite>Hapyy Birthday to Vivian</cite></a></td>
     <td class="right"><time>2020-07-14</time></td>
 </tr>    
