--- a/blog.html
+++ b/blog.html
@@ -82,7 +82,11 @@ var _hmt = _hmt || [];
         <table class="postindex">
 <tbody>
     
- 
+ <tr>
+    <td><a href="/post/2020-09-09-DNA-sequencing"><cite>DNA-sequencing｜关于DNA测序</cite></a></td>
+    <td class="right"><time>2020-09-09</time></td>
+</tr>  
+      
 <tr>
     <td><a href="https://sourl.cn/SdDBuL"><cite>奇奇怪怪的云</cite></a></td>
     <td class="right"><time>2020-08-09</time></td>
