--- a/pages/photo/index.html
+++ b/pages/photo/index.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="">
 <meta name="viewport"
         content="width=device-width, initial-scale=1">
-<title>瀑布流相册可点击放大</title>
+<title>Photo</title>
 <!-- Set render engine for 360 browser -->
 <meta name="renderer" content="webkit">
 <!-- No Baidu Siteapp-->
