--- a/pages/photo/index.html
+++ b/pages/photo/index.html
@@ -16,7 +16,7 @@
 <meta name="mobile-web-app-capable" content="yes">
 <!-- Add to homescreen for Safari on iOS -->
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-status-bar-style" content="white">
 <meta name="apple-mobile-web-app-title" content="Amaze UI"/>
 <link rel="apple-touch-icon-precomposed" href="assets/i/app-icon72x72@2x.png">
 <!-- Tile icon for Win8 (144x144 + tile color) -->
