--- a/pages/24fps.html
+++ b/pages/24fps.html
@@ -58,6 +58,7 @@ var _hmt = _hmt || [];
         <li><a href="/files/cv.pdf">CV</a></li>
         <li><a href="/tools.html">Tools</a></li>
         <li><a href="/pages/24fps.html">24 FPS</a></li>
+	<li><a href="/posts/albulm.html">Miss</a></li>
       </ul>
     </nav>
     <main>
