--- a/vlog/vlog16.html
+++ b/vlog/vlog16.html
@@ -71,12 +71,11 @@ var _hmt = _hmt || [];
       <ul>
         <li><a href="/">About</a></li>
         <li><a href="/blog.html">Blog</a></li>
-	<li><a href="/posts/albulm.html">Vlog</a></li>
 	<li><a href="/posts/vlog.html">Vlog</a></li>
         <li><a href="/files/cv.pdf">CV</a></li>
         <li><a href="/tools.html">Tools</a></li>
         <li><a href="/pages/24fps.html">24 FPS</a></li>
-	<li><a href="/posts/albulm.html">Miss</a></li>
+	<li><a href="/post/album.html">Miss</a></li>
       </ul>
     </nav>
     <main>
