--- a/vlog/vlog16.html
+++ b/vlog/vlog16.html
@@ -75,7 +75,7 @@ var _hmt = _hmt || [];
         <li><a href="/files/cv.pdf">CV</a></li>
         <li><a href="/tools.html">Tools</a></li>
         <li><a href="/pages/24fps.html">24 FPS</a></li>
-	<li><a href="/post/album.html">Miss</a></li>
+	<li><a href="/posts/album.html">Miss</a></li>
       </ul>
     </nav>
     <main>
