--- a/vlog/my2020.html
+++ b/vlog/my2020.html
@@ -4,12 +4,12 @@
     <meta name="description" content="The Art Gallery Guardian">
     <meta name="author" content="Rui Wang">
  <!--作者-->
-    <meta property="og:title" content="晚安，读书人">
+    <meta property="og:title" content="MY YEAR 2020">
  <!--页面标题-->
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="The Art Gallery Guardian">
     <meta property="article:tag" content="Flim, life">
-    <title>晚安，读书人</title> 
+    <title>MY YEAR 2020</title> 
  <!--页面标题-->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
@@ -81,7 +81,7 @@ var _hmt = _hmt || [];
     <main>
 <!--文章标题-->
         <article>
-        <h1 id="article-title">晚安，读书人</h1>
+        <h1 id="article-title">MY YEAR 2020</h1>
         <br>
 <div>
 	
@@ -91,12 +91,13 @@ var _hmt = _hmt || [];
 	
     <center>       
 <video width="92%" poster="https://tva1.sinaimg.cn/large/0081Kckwgy1gkahr2in5bj31hc0u0gn0.jpg" controls="controls">
-  <source src="https://sourl.cn/keyNnj" type="video/mp4" />
+  <source src="https://baklibcdn.dagle.cn/t/47f31d55-2350-45ec-a0bd-ee806e6da6e8/u/20ddcf34-1454-4b5e-8e13-a813f0bae50c/2020_11610640321843.mp4" type="video/mp4" />
   </object>
 </video>
 	  </center>   
     
-  <center> 晚安，读书人 </center>   
+  <center> MY YEAR 2020 </center>  
+		  <center>  2020年发生了许多事，对于每个人都是意义非凡的一年，回过头来看看，在许多糟心的记忆里，还是有一些在暗暗发光的美好瞬间。</center>  
             <br>
 	</br>
             
