--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Ruiprime</title>
+  <title>王睿的个人主页</title>
   <meta name="description" content="The personal webpage of Rui Wang.">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css" crossorigin="anonymous">
   <!-- Do not remove katex render. Index page is a idpage --> 
@@ -375,11 +375,11 @@ problems in hypergraphs of small rank.</li>
 	
 	
    <footer class="hide-on-print"> <center> <a href="https://beian.miit.gov.cn"> 苏ICP备XXXXXX号</a> </center>
-	
+	<center>   <script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1279968361&web_id=1279968361"></script> </center>
 	</footer>
 	
 </div>
-	    <script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1279968361&web_id=1279968361"></script>
+	  
 	
 </body>
 
