--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ problems in hypergraphs of small rank.</li>
         C = Math.floor((b-B)*60);
         D = Math.floor((c-C)*60);
         //信息写入到DIV中
-        span.innerHTML = A+"Days"+B+"h"+C+"m"+D+"s"
+        span.innerHTML = A+";"+B+":"+C+":"+D+":"
     }
     setInterval(runtime, 1000);
             </script>   
